# Platonica

./: .gitignore  .gitmodules  CMakeLists.txt  CopyShaders.bat  README.md  Setup.bat
PlatonicaAtlasCreator/: CreateAtlas.bat  CreateAtlas.py
resources/shaders/: Basic.frag  Basic.vert  RegionEntity.frag  RegionEntity.vert  WorldCubes.frag  WorldCubes.vert
resources/textures/blocks/: showTile.html
shaders/: WorldCubes.frag  WorldCubes.vert
source/private/: AsyncChunkManager.cpp  Camera.cpp  Chunk.cpp  ChunkRegion.cpp  ClientWorld.cpp  Cube.cpp  CubeDef.cpp  CubeDefs.cpp  GameManager.cpp  PerlinNoise.cpp  Player.cpp  RenderObject.cpp  Renderer.cpp  ShaderHelper.cpp  Transform.cpp  UpdateObject.cpp  Window.cpp  World.cpp  WorldLoader.cpp  main.cpp
source/public/: AsyncChunkManager.h  Camera.h  Chunk.h  ChunkRegion.h  ClientWorld.h  Cube.h  CubeDef.h  CubeDefs.h  Defs.h  GameManager.h  MathFunctions.h  PerlinNoise.h  Player.h  RenderObject.h  Renderer.h  ShaderHelper.h  TestObjects.h  Transform.h  UpdateObject.h  Window.h  World.h  WorldLoader.h
